<resources>
    <string name="app_name">Recyco</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">Masuk ke akun Recyco</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="password">Kata Sandi</string>
    <string name="no_account_yet">Belum punya akun? Daftar disini</string>
    <string name="login">Login</string>
    <string name="register_header">Daftar ke Recyco</string>
    <string name="organization_individual_name">Nama Individu/Institusi</string>
    <string name="user_category">Kategori Pengguna</string>
    <string name="have_account_yet">Sudah punya akun? Login disini</string>
    <string name="recyco_coins">Recyco Coins</string>
    <string name="logout">Logout</string>
    <string name="waste_market">Pasar Limbah</string>
    <string name="my_waste">Limbah Saya</string>
    <string name="order_history">Riwayat Pemesanan</string>
    <string name="add_image">Tambah Gambar</string>
    <string name="name">Nama</string>
    <string name="description">Deskripsi</string>
    <string name="price">Harga</string>
    <string name="weight_kg">Berat (kg)</string>
    <string name="sell">Jual</string>
    <string name="contact">Hubungi</string>
    <string name="request_delivery">Minta Antar</string>
    <string name="deliver_to">Antar Ke</string>
    <string name="recipient_information">Informasi Penerima</string>
    <string name="note">Catatan</string>
    <string name="order_detail">Detail Pesanan</string>
    <string name="service_deliver_fee">Total Layanan dan Ongkir</string>
    <string name="order_request_now">Pesan dan antar sekarang</string>
    <string name="order_time">Waktu Pemesanan</string>
    <string name="deliver_time">Waktu Pengantaran</string>
    <string name="done_time">Waktu Selesai</string>
    <string name="price_template">Rp. %1$s</string>
    <string name="weight_template">%1$s kg</string>
    <string name="process_order">Proses Pesanan</string>
    <string name="finish_order">Selesaikan Pesanan</string>
    <string name="welcome">Selamat Datang</string>
    <string name="coin_total">2400 koin</string>
    <string name="check_reward">Cek Hadiah</string>
    <string name="register_your_community">Daftarkan Komunitas Anda</string>
    <string name="waste_treatment_location">Lokasi Depo Limbah</string>
    <string name="article">Artikel</string>
    <string name="discussion_forum">Forum Diskusi</string>
    <string name="comment">Komentar</string>
    <string name="add_comment">Tambah Komentar...</string>
    <string name="add_discussion">Tambah Diskusi</string>
    <string name="add_waste">Tambah Limbah</string>
    <string name="delivery_status">Status Pesan Antar</string>
    <string name="discussion">Diskusi</string>
    <string name="edit_product">Ubah Status Produk</string>
    <string name="my_waste_product">Limbah Saya di Pasar</string>
    <string name="product_detail">Detail Produk</string>
    <string name="recyco_coins_overview">Sekilas tentang Recyco Coins</string>
    <string name="recyco_coins_overview_description">Recyco Coins merupakan skema reward yang dapat ditukar dengan berbagai hadiah menarik, seperti merchandise dan diskon biaya layanan Recyco. Untuk mendapatkan Recyco Coins, Anda dapat melakukan kontribusi terhadap forum Recyco secara positif. Recyco Coins tidak dapat diuangkan dan ditransfer ke pengguna lain.</string>
    <string name="reward_1_total">500 koin</string>
    <string name="reward_1_title">Celengan dari Botol Plastik Bekas</string>
    <string name="reward_2_title">Keranjang dari Sedotan Plastik Bekas</string>
    <string name="reward_2_total">1000 koin</string>
    <string name="reward_3_title">Dompet dari Bungkus Kemasan Snack</string>
    <string name="reward_3_total">2500 koin</string>
    <string name="article_detail">Detail Artikel</string>
    <string name="register_community">Daftar Komunitas</string>
    <string name="register">Daftar</string>
    <string name="community">Komunitas</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="treatment_location">Lokasi Depo Limbah</string>
</resources>